# LettuceThink

./: README.md  example_boustrophedon.py  lettucehoe.py
LettuceROS/p2p/: CMakeLists.txt  package.xml
LettuceROS/p2p/action/: goto.action
LettuceROS/p2p/launch/: lettuce.launch
LettuceROS/p2p/parameter/: params.json
LettuceROS/p2p/src/: camera_driver.py  cnc_utils.py  comput.py  workspace.py
LettuceROS/src/p2p/: CMakeLists.txt  package.xml
LettuceROS/src/p2p/launch/: camera.launch  timeraw.launch
LettuceROS/src/p2p/scripts/: killer_serv.py  plot_utils.py  test_time.py
LettuceROS/src/p2p/src/: cnc_node.py  killer.py  lettucehoe2.py
LettuceROS/src/p2p/srv/: Compr.srv  Path.srv  Path2.srv  Raw.srv
apps/LettuceHoe/: cnc_utils.py  lettucehoe2.py  main.py  plot_utils.py  workspace.py
apps/LettuceHoe/data/: boustro.npy  tool_path.npy
apps/LettuceHoe/params/: params.json
apps/LettuceHoe/static/: cpanel.html  cpanel_OH.html  index.html  maps.html
apps/LettuceHoe/static/css/: lettucethink.css
apps/LettuceHoe/static/fonts/: fontello.eot
apps/LettuceHoe/static/js/: virtualjoystick.js
apps/LettuceScan/PanTiltFeatherEthernet/: PanTiltFeatherEthernet.ino
apps/LettuceScan/PanTiltFeatherSerial/: PanTiltFeatherSerial.ino  parser.cpp  parser.hpp
apps/LettuceScan/WebApp/: LettuceScan.py  README.txt  dsgrab.py  start.sh
apps/LettuceScan/WebApp/static/: index.html
robot/design/OpenScad/Common/: nema.scad  tubular.scad
robot/design/OpenScad/Frame/: LettuceThink-v2-3.scad  LettuceThink-v2-3.stl  box.scad  emergencystop.scad  mainframe3.scad  ring.scad  solarpanel.scad  wheel.scad  wheel.stl  wheelcolumn.scad  wheelfork.scad  wheelfork.stl  wheelmodule.scad
robot/design/OpenScad/RollerBearingsWithPhotoSwitch/: main.scad  ring_inner_bottom.scad  (+7 more)
robot/src/NavModule/: Makefile  navmod.c
robot/src/RCModule/: RCModule.ino
(+17 files in other folders)
