<?xml version="1.0"?>
<package>
  <name>p2p</name>
  <version>0.0.0</version>
  <description>The p2p package</description>

  <maintainer email="aurele.mace@gmai.com">aurele</maintainer>

  <license>GNU Lesser General Public License</license>

  <url type="website">https://p2pfoodlab.net/wiki/index.php/Weeding_Robot</url>

  <author email="aurele.mace@gmail.com">Aurele Mace</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>camera_info_manager_py</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>camera_info_manager_py</run_depend>

</package>

